--- a/spark_anvil.css
+++ b/spark_anvil.css
@@ -1,22 +1,215 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap');
 
-body,
-.forge-flow {
-  font-family: 'Inter', sans-serif;
-  background-color: #fff;
+
+:root {
+  /******** root colors - sets defaults for everything else that are overrideable ********/
+  --root-black-color: #292929;
+  --root-white-color: #fff;
+  --root-background: var(--root-white-color);
+  --root-text-color: var(--root-black-color);
+  --root-brand-color: #6002ee !important;
+  --root-brand-color-10: #b794f6;
+  --root-brand-color-20: #efe5fd;
+  --root-green-color: #2ed27c;
+  --root-green-color-10: rgba(46, 210, 124, 0.4);
+  --root-error-color: #D4414F;
+  --root-link-color: #4C64D9;
+  --root-link-hover-color: #2E45B7;
+
+  /******** root typography ********/
+  --root-font-family: "Inter", sans-serif;
+  --root-font-weight: 400;
+  /* --root-title-display: none; */
+
+  /******** backgrounds ********/
+  /* --webform-background: <color-value>; */
+  /* --esign-background: <color-value>; */
+
+  /******** webform titles ********/
+  --webform-title-font-weight: 600;
+  --webform-title-font-style: normal;
+  --webform-title-font-size: 32px;
+  --webform-page-title-font-weight: 400;
+  --webform-page-title-font-style: normal;
+  --webform-page-title-font-size: 32px;
+
+  /* --webform-title-color: <color-value>; */
+  /* --webform-page-title-underline-color: <color value>; */
+  /* --webform-page-title-underline-display: none; */
+  /* --webform-page-title-color: <color-value>; */
+
+  /******** button ********/
+  --button-border-radius: 4px;
+  --button-disabled-background: #F3F3F3;
+  --button-disabled-color: #6F6F6F;
+
+  /* --button-disabled-icon-color: <color-value>; */
+  /* --button-background: <color value>; */
+  /* --button-color: <color-value>; */
+  /* --button-hover-color: <color-value>; */
+  /* --button-hover-background: <color-value>; */
+  /* --button-focus-color: <color-value>; */
+  /* --button-focus-background: <color-value>; */
+
+  /******** circle icons ********/
+  /* --circle-icon-background: <color-value>; */
+  /* --circle-icon-color: <color-value; */
+  /* --circle-icon-button-background: <color-value>; */
+
+  /******** fields ********/
+  --field-label-font-weight: 400;
+  --field-error-box-shadow: none;
+  --field-error-background: transparent;
+
+  /* --field-error-label-background: transparent; */
+  /* --field-error-text-color: <color-value>; */
+  /* --field-label-color: <color-value>; */
+
+  /******** field inputs ********/
+  --field-input-background-color: transparent;
+  --field-input-border: none;
+  --field-input-border-bottom: 2px solid rgba(0, 0, 0, 0.1);
+  --field-input-focus-box-shadow: none;
+  --field-input-padding-x: 0;
+  /* --field-input-hover-border-color: <color value>; */
+  /* --field-input-focus-border-color: <color value>; *
+  /* padding-y is not supported right now - use selectors to target elements you want for padding top/bottom */
+
+  /******** dropdown ********/
+  --dropdown-menu-font-weight: 400;
+  --dropdown-menu-style: normal;
+  --dropdown-placeholder-font-style: italic;
+  --dropdown-placeholder-font-weight: 400;
+
+  /* --dropdown-option-active-background-color: <color-value>; */
+  /* --dropdown-menu-background-color: <color-value>; */
+  /* --dropdown-menu-color: <color-value>; */
+  /* --dropdown-placeholder-background-color: <color-value>; */
+  /* --dropdown-placeholder-color: <color-value>; */
+  /* --dropdown-placeholder-active-color: <color-value>; */
+
+  /******** date picker ********/
+  --date-picker-border: none;
+  --date-picker-today-border-radius: 0;
+  --date-picker-footer-button-font-style: italic;
+  --date-picker-footer-button-font-weight: 500;
+  --date-picker-days-of-week-font-style: italic;
+  --date-picker-days-of-week-font-weight: 600;
+
+  /* --date-picker-footer-button-color: <color-value>; */
+  /* --date-picker-footer-button-hover-color: <color-value>; */
+  /* --date-picker-background: <color-value>; */
+  /* --date-picker-color: <color-value>; */
+  /* --date-picker-hover-background: <color-value>; */
+  /* --date-picker-today-hover-background: <color-value>; */
+  /* --date-picker-today-hover-color: <color-value>; */
+  /* --date-picker-controls-color: <color-value>; */
+  /* --date-picker-controls-hover-color: <color-value>; */
+
+  /******** dropzone ********/
+  /* --dropzone-border: 2px dashed <color-value>; */
+  /* --dropzone-active-border: 2px dashed <color-value>; */
+  /* --dropzone-accept-border: 2px dashed <color-value>; */
+  /* --dropzone-accept-background: <color-value>; */
+  /* --dropzone-reject-border: 2px dashed <color-value>; */
+  /* --dropzone-error-text-color: <color-value>; */
+
+  /******** dropzone supported selectors ********/
+  /* there are more, but these are only on certain drag and drop states */
+  /* they are here for easier reference. you can target anything within the dropzone for these states using these classes */
+  /* - `.anvil-dropzone-drop-active` */
+  /* - `.anvil-dropzone-drop-accept` */
+  /* - `.anvil-dropzone-drop-reject` */
+  /* - `.anvil-dropzone-drop-disabled` */
+
+  /******** loading spinner ********/
+  /* --loading-spinner-color: <color-value>; */
+  --loading-spinner-size: 24px;
+  --loading-spinner-thickness: 2px;
+
+  /******** checkboxes ********/
+  /* --checkbox-checked-background: <color-value>; */
+  /* --checkbox-checked-border-color: <color-value>; */
+  /* --checkbox-check-hover-border-color: <color-value>; */
+
+  /* --checkbox-checked-border: 1px solid var(--root-primary-color); */
+  /* --checkbox-border-radius: 50%; */
+
+  /******** radio buttons ********/
+  /* --radio-buttons-selected-background: <color-value>; */
+  /* --radio-buttons-selected-color: <color-value>; */
+  /* --radio-buttons-unselected-background-color: <color-value>; */
+  /* --radio-buttons-unselected-color: <color-value>; */
+
+  /******** content card ********/
+  --content-card-background: transparent;
+  --content-card-box-shadow: none;
+  --content-card-padding: 0;
+  --content-card-margin-bottom: 32px;
+  --content-title-font-size: 16px;
+  --content-title-font-weight: 600;
+
+  /*************************************/
+  /******** webform review page ********/
+  /*************************************/
+
+  /******** review data card ********/
+  --review-data-card-empty-value-required-border-left: none;
+  --review-data-card-empty-value-required-border-bottom: 2px solid
+    var(--root-error-color);
+  --review-data-card-empty-value-font-style: italic;
+
+  /* --review-data-card-value-empty-required-hover-color: <color-value>; */
+  /* --review-data-card-value-label-color: <color-value>; */
+  /* --review-data-card-value-label-hover-color: <color-value>; */
+  /* --review-data-card-item-edit-link-color: <color-value>; */
+  /* --review-data-card-empty-value-required-border-color: <color-value>; */
+  /* --review-data-card-edit-button-color: <color-value>; */
+  /* --review-data-card-edit-button-hover-color: <color-value>; */
 }
-a {
-  color: red !important;
+
+
+
+
+
+
+
+.anvil-markdown strong {
+  font-weight: 600;
+  font-style: normal;
 }
-.form-group input {
-  border: 2px solid #4C64D9;
-  background-color: #4C64D9;
-  border-radius: 20px;
-  height: 40px;
+
+.anvil-markdown ul {
+  list-style-type: square;
+}
+
+.anvil-markdown ol {
+  list-style-type: decimal;
+}
+
+.anvil-field-content-container {
+  display: flex;
+  flex-direction: column;
+}
+
+/* we use ant-form-item-has-error to target only error fields. will change to anvil-field-has-error in the future */
+.ant-form-item-has-error
+  .anvil-field-content-container
+  .anvil-field-help-label {
+  order: 2;
+  position: relative;
+  margin-top: 6px;
+  text-align: left;
+  padding-left: 0;
+  padding-right: 0;
+}
+
+.anvil-list-input-item .anvil-field-label {
   font-size: 14px;
-  padding: 0 24px;
+  font-style: normal;
+  font-weight: 400;
 }
-.form-group input:hover, .form-group input:focus, .form-group input:active {
-  border: 2px solid #2E45B7;
-  background-color: #2E45B7;
-}
+
+
+
+
