--- a/spark-anvil2.css
+++ b/spark-anvil2.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600,700&display=swap');
 
 
 :root {
@@ -29,7 +29,7 @@
   --webform-title-font-weight: 600;
   --webform-title-font-style: normal;
   --webform-title-font-size: 20px;
-  --webform-page-title-font-weight: 600;
+  --webform-page-title-font-weight: 700;
   --webform-page-title-font-style: normal;
   --webform-page-title-font-size: 32px;
 
@@ -69,7 +69,7 @@
   --field-input-border: 1px solid #8C8C8C;
   --field-input-border-radius: 4px;
   --field-input-height: 40px;
-  --field-input-focus-box-shadow: none;
+  --field-input-focus-box-shadow: 0 0 0 1px #4C64D9;;
   --field-input-padding-x: 12px;
   --field-input-hover-border-color: #4C64D9;
   --field-input-focus-border-color: #4C64D9;
@@ -77,6 +77,21 @@
   --field-optional-font-size: 16px;
   --field-optional-font-style: normal;
   --field-optional-font-weight: 400;
+
+  /******** checkbox ********/
+  --checkbox-border-radius: 2px;
+  --checkbox-check-hover-border-color: #4C64D9;
+  --checkbox-checked-border-color: #2E45B7;
+  --checkbox-unchecked-border-color: #8C8C8C;
+
+  /******** radio buttons ********/
+  --radio-buttons-selected-border-color: #2E45B7;
+  --radio-color: #2E45B7;
+  --radio-buttons-unselected-border-color: #8C8C8C;
+  --radio-buttons-hover-border-color: #4C64D9;
+
+
+  
 
   /******** dropdown ********/
   --dropdown-menu-font-weight: 400;
@@ -171,7 +186,9 @@
   /* --review-data-card-edit-button-hover-color: <color-value>; */
 }
 
-
+.header-title {
+  padding: 0;
+}
 
 
 
@@ -211,5 +228,6 @@
   font-size: 14px;
   font-style: normal;
   font-weight: 400;
+  color: #292929;
 }
 
